--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": {
+      "@arvinn/vue-hot-toast": ["node_modules/@arvinn/vue-hot-toast/index.ts"],
       "~/*": ["src/*"],
       "@/*": ["./src/*"]
     },
