--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "playground",
   "version": "0.0.1",
   "private": false,
+  "type": "module",
   "scripts": {
     "setup": "cd packages && pnpm link --global && cd .. && pnpm link --global @arvinn/vue-hot-toast",
     "dev": "vite --port 3333 --open",
@@ -22,8 +23,12 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
+  "dependencies": {
+    "@arvinn/vue-hot-toast": "workspace:^"
+  },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.17.0",
+    "@arvinn/eslint-config": "^0.0.4",
+    "@arvinn/prettier-config": "^0.0.1",
     "@egoist/tailwindcss-icons": "^1.8.0",
     "@iconify-json/carbon": "^1.1.33",
     "@iconify-json/lucide": "^1.1.187",
@@ -52,6 +57,7 @@
     "lucide-vue-next": "^0.378.0",
     "pnpm": "^9.1.1",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.0",
     "radix-vue": "^1.7.4",
     "rimraf": "^5.0.7",
     "shadcn-vue": "^0.10.4",
@@ -76,10 +82,11 @@
     "vue-sonner": "^1.1.2",
     "vue-tsc": "^2.0.17"
   },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
   "lint-staged": {
     "*": "eslint --fix"
+  },
+  "prettier": "@arvinn/prettier-config",
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
   }
 }
