--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "setup": "cd packages && pnpm link --global && cd .. && pnpm link --global @arvinn/vue-hot-toast",
     "dev": "vite --port 3333 --open",
     "lint": "eslint . && npm run lint:fix",
     "lint:fix": "eslint --fix",
@@ -24,7 +23,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@arvinn/vue-hot-toast": "workspace:^"
+    "vue3-hot-toast": "workspace:^"
   },
   "devDependencies": {
     "@arvinn/eslint-config": "^0.0.4",
