--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_PKG_NAME=foo
-VITE_PKG_HOMEPAGE=https://github.com/pinky-pig/starter-vue-lib
-VITE_PKG_REPOSITORY_URL=https://github.com/pinky-pig/starter-vue-lib
+VITE_PKG_NAME=vue3-hot-toast
+VITE_PKG_HOMEPAGE=https://github.com/pinky-pig/vue3-hot-toast
+VITE_PKG_REPOSITORY_URL=https://github.com/pinky-pig/vue3-hot-toast
