--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint:fix": "eslint --fix",
     "build": "vite build",
     "build:lib": "vite build --mode lib && npm run build:types",
-    "build:types": "vue-tsc -p tsconfig.build.json && api-extractor run && rimraf temp",
-    "release:lib": "bumpp -c \"release: v%s\" packages/package.json && esno scripts/copy.ts && cd output-lib && npm publish",
+    "build:types": "vue-tsc -p tsconfig.build.json && api-extractor run && rimraf temp && tsx scripts/copy.ts ",
+    "release:lib": "bumpp -c \"release: v%s\" packages/package.json && tsx scripts/copy.ts && cd output-lib && npm publish",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "test": "vitest",
     "up": "taze major -I",
-    "copy": "esno scripts/copy.ts",
-    "fetch-vsc-settings": "esno scripts/vsc-settings.ts",
+    "copy": "tsx scripts/copy.ts",
+    "fetch-vsc-settings": "tsx scripts/vsc-settings.ts",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -29,57 +29,57 @@
     "@arvinn/eslint-config": "^0.0.4",
     "@arvinn/prettier-config": "^0.0.1",
     "@egoist/tailwindcss-icons": "^1.8.0",
-    "@iconify-json/carbon": "^1.1.33",
-    "@iconify-json/lucide": "^1.1.187",
-    "@iconify/json": "^2.2.209",
-    "@microsoft/api-extractor": "^7.43.4",
+    "@iconify-json/carbon": "^1.1.34",
+    "@iconify-json/lucide": "^1.1.189",
+    "@iconify/json": "^2.2.216",
+    "@microsoft/api-extractor": "^7.47.0",
     "@types/clean-css": "^4.2.11",
-    "@types/node": "^20.12.11",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@types/node": "^20.14.2",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "@vueuse/core": "^10.9.0",
+    "@vueuse/core": "^10.10.0",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "bumpp": "^9.4.1",
     "class-variance-authority": "^0.7.0",
     "clean-css": "^5.3.3",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "eslint": "^9.2.0",
+    "eslint": "^9.4.0",
     "eslint-plugin-format": "^0.1.1",
-    "esno": "^4.7.0",
     "fs": "0.0.1-security",
     "https-localhost": "^4.7.1",
-    "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.2",
-    "lucide-vue-next": "^0.378.0",
-    "pnpm": "^9.1.1",
+    "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.5",
+    "lucide-vue-next": "^0.383.0",
+    "pnpm": "^9.1.4",
     "postcss": "^8.4.38",
     "prettier": "^3.3.0",
-    "radix-vue": "^1.7.4",
+    "radix-vue": "^1.8.3",
     "rimraf": "^5.0.7",
-    "shadcn-vue": "^0.10.4",
-    "shiki": "^1.5.1",
+    "shadcn-vue": "^0.10.5",
+    "shiki": "^1.6.2",
     "simple-git": "^3.24.0",
     "simple-git-hooks": "^2.11.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "taze": "^0.13.8",
+    "tsx": "^4.11.2",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
-    "unplugin-vue-router": "^0.8.6",
-    "vite": "^5.2.11",
+    "unplugin-vue-router": "^0.9.0",
+    "vite": "^5.2.12",
     "vite-ssg": "^0.23.7",
-    "vite-ssg-sitemap": "^0.6.1",
-    "vitepress": "^1.1.4",
+    "vite-ssg-sitemap": "^0.7.1",
+    "vitepress": "^1.2.3",
     "vitest": "^1.6.0",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-sonner": "^1.1.2",
-    "vue-tsc": "^2.0.17"
+    "vue-tsc": "^2.0.19"
   },
   "lint-staged": {
     "*": "eslint --fix"
