--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-hot-toast",
-  "version": "0.0.1-beta.1",
+  "version": "0.0.2",
   "private": false,
   "type": "module",
   "keywords": [
