--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_PKG_NAME=vue3-hot-toast
-VITE_PKG_HOMEPAGE=https://github.com/pinky-pig/vue3-hot-toast
+VITE_PKG_HOMEPAGE=https://vue3-hot-toast.netlify.app/
 VITE_PKG_REPOSITORY_URL=https://github.com/pinky-pig/vue3-hot-toast
